--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,8 @@
 .menu{
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+}
+.logo-img{
+    width: 40px;
+    height: 40px;
 }
